--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -560,5 +560,9 @@
   "securitySetup": "Қауіпсіздікті баптау",
   "useBiometricsOrCreatePin": "Қосымшаны қорғау үшін биометрияны қолданыңыз немесе PIN код жасаңыз",
   "continueButton": "Жалғастыру",
-  "giveAccessToData": "Деректерге қол жеткізуге рұқсат беру"
+  "giveAccessToData": "Деректерге қол жеткізуге рұқсат беру",
+  "privacyButton": "Жеке деректерді өңдеу саясаты",
+  "privacyTitle": "Құпиялылық саясаты",
+  "publicTitle": "Қоғамдық келісім-шарт (оферта)",
+  "publicMobileTitle": "Мобильді қосымшаның ашық ұсынысы туралы келісім"
 }
