Added Mobile Notifications, Fixed a lot of things, Added Full State Savings

--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -293,7 +293,7 @@
   "variants": "Варианты",
   "price": "Цена",
   "add": "Добавить",
-  "register": "Записаться",
+  "register": "Зарегистрироваться",
   "addToCart": "Добавить в корзину",
   "astanaFacilities": "Астана: 256 сооружений",
   "addFacility": "Добавить площадку",
