--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -237,6 +237,7 @@
   "email": "Email",
   "phoneNumber": "Номер телефона",
   "iinOptional": "ИИН (необязательно)",
+  "iinMustBe12Digits": "ИИН должен состоять из 12 цифр",
   "saveChanges": "Сохранить изменения",
   "profileSuccessfullyUpdated": "Профиль успешно обновлен",
   "security": "Безопасность",
@@ -566,5 +567,30 @@
   "privacyButton": "Политика обработки персональных данных",
   "privacyTitle": "Политика конфиденциальности",
   "publicTitle": "Публичный договор (оферта)",
-  "publicMobileTitle": "Публичный договор-оферта мобильного приложения"
+  "publicMobileTitle": "Публичный договор-оферта мобильного приложения",
+  "weWillSendSmsCode": "Мы отправим SMS-код для подтверждения",
+  "smsCodeWillArriveIn": "SMS-код придет в течение 1-2 минут",
+  "or": "или",
+  "enterCodeFromSms": "Введите код из SMS",
+  "codeResentAgain": "Код отправлен повторно",
+  "passwordSuccessfullyChanged": "Пароль успешно изменен",
+  "wrongCodeOrResetError": "Неверный код или ошибка сброса пароля",
+  "newPasswordTitle": "Новый пароль",
+  "enterSmsCodeAndNewPassword": "Введите код из SMS и новый пароль",
+  "codeValidFor": "Код действителен:",
+  "codeExpiredRequestNew": "Время действия кода истекло. Запросите новый код.",
+  "codeExpired": "Время действия кода истекло",
+  "resetPasswordButton": "Сбросить пароль",
+  "resendCodeAgain": "Отправить код повторно",
+  "backToSignIn": "Вернуться к входу",
+  "resetCodeSent": "Код для сброса пароля отправлен",
+  "passwordResetTitle": "Сброс пароля",
+  "enterPhoneToGetCode": "Введите номер телефона для получения кода",
+  "sendCode": "Отправить код",
+  "enterValidPhoneNumber": "Введите корректный номер телефона",
+  "enterValidEmail": "Введите корректный email",
+  "enterEmailPhoneOrLogin": "Введите email, телефон или логин",
+  "emailPhoneOrLogin": "Email, телефон или логин",
+  "createNewAccount": "Создайте новый аккаунт",
+  "passwordRequirements": "Пароль должен содержать минимум 1 заглавную, 1 строчную букву, 1 цифру и 1 спецсимвол"
 }
