Auth Ended (Localization lefts)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -568,5 +568,30 @@
   "privacyButton": "Personal data processing policy",
   "privacyTitle": "Privacy Policy",
   "publicTitle": "Public contract (offer)",
-  "publicMobileTitle": "Mobile application public offer agreement"
+  "publicMobileTitle": "Mobile application public offer agreement",
+  "weWillSendSmsCode": "We will send an SMS code for verification",
+  "smsCodeWillArriveIn": "SMS code will arrive within 1-2 minutes",
+  "or": "or",
+  "enterCodeFromSms": "Enter code from SMS",
+  "codeResentAgain": "Code resent",
+  "passwordSuccessfullyChanged": "Password successfully changed",
+  "wrongCodeOrResetError": "Wrong code or password reset error",
+  "newPasswordTitle": "New Password",
+  "enterSmsCodeAndNewPassword": "Enter code from SMS and new password",
+  "codeValidFor": "Code valid for:",
+  "codeExpiredRequestNew": "Code expired. Request a new code.",
+  "codeExpired": "Code expired",
+  "resetPasswordButton": "Reset Password",
+  "resendCodeAgain": "Resend code",
+  "backToSignIn": "Back to sign in",
+  "resetCodeSent": "Password reset code sent",
+  "passwordResetTitle": "Password Reset",
+  "enterPhoneToGetCode": "Enter phone number to get code",
+  "sendCode": "Send code",
+  "enterValidPhoneNumber": "Enter a valid phone number",
+  "enterValidEmail": "Enter a valid email",
+  "enterEmailPhoneOrLogin": "Enter email, phone or login",
+  "emailPhoneOrLogin": "Email, phone or login",
+  "createNewAccount": "Create a new account",
+  "passwordRequirements": "Password must contain at least 1 uppercase, 1 lowercase letter, 1 digit and 1 special character"
 }
