--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -567,5 +567,30 @@
   "privacyButton": "Жеке деректерді өңдеу саясаты",
   "privacyTitle": "Құпиялылық саясаты",
   "publicTitle": "Қоғамдық келісім-шарт (оферта)",
-  "publicMobileTitle": "Мобильді қосымшаның ашық ұсынысы туралы келісім"
+  "publicMobileTitle": "Мобильді қосымшаның ашық ұсынысы туралы келісім",
+  "weWillSendSmsCode": "Растау үшін SMS кодын жібереміз",
+  "smsCodeWillArriveIn": "SMS код 1-2 минут ішінде келеді",
+  "or": "немесе",
+  "enterCodeFromSms": "SMS-тен кодты енгізіңіз",
+  "codeResentAgain": "Код қайта жіберілді",
+  "passwordSuccessfullyChanged": "Құпия сөз сәтті өзгертілді",
+  "wrongCodeOrResetError": "Қате код немесе құпия сөзді қалпына келтіру қатесі",
+  "newPasswordTitle": "Жаңа құпия сөз",
+  "enterSmsCodeAndNewPassword": "SMS-тен кодты және жаңа құпия сөзді енгізіңіз",
+  "codeValidFor": "Кодтың жарамдылық мерзімі:",
+  "codeExpiredRequestNew": "Код мерзімі өтті. Жаңа код сұраңыз.",
+  "codeExpired": "Код мерзімі өтті",
+  "resetPasswordButton": "Құпия сөзді қалпына келтіру",
+  "resendCodeAgain": "Кодты қайта жіберу",
+  "backToSignIn": "Кіруге қайту",
+  "resetCodeSent": "Құпия сөзді қалпына келтіру коды жіберілді",
+  "passwordResetTitle": "Құпия сөзді қалпына келтіру",
+  "enterPhoneToGetCode": "Код алу үшін телефон нөмірін енгізіңіз",
+  "sendCode": "Код жіберу",
+  "enterValidPhoneNumber": "Жарамды телефон нөмірін енгізіңіз",
+  "enterValidEmail": "Жарамды email енгізіңіз",
+  "enterEmailPhoneOrLogin": "Email, телефон немесе логин енгізіңіз",
+  "emailPhoneOrLogin": "Email, телефон немесе логин",
+  "createNewAccount": "Жаңа тіркелгі жасаңыз",
+  "passwordRequirements": "Құпия сөз кемінде 1 бас әріпті, 1 кіші әріпті, 1 санды және 1 арнайы таңбаны қамтуы керек"
 }
