--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -81,29 +81,29 @@
   "loadingErrorWithMessage": "Жүктеу қатесі:",
   "selectLineupTabToLoad": "'Құрам' қойындысын таңдаңыз",
   "selectPlayersTabToLoad": "Ойыншылар статистикасы қойындысын таңдаңыз",
-  "ballPossession": "Доп володельство",
+  "ballPossession": "Допқа иелік ету",
   "shots": "Соққылар",
-  "shotsOnGoal": "Қақпаға соққылар",
-  "shotsOffGoal": "Қақпаның сыртына",
-  "fouls": "Бұзып кетулер",
-  "yellowCards": "Сары карточкалар",
+  "shotsOnGoal": "Қақпаға бағытталған соққылар",
+  "shotsOffGoal": "Қиыс соққылар",
+  "fouls": "Фолдар",
+  "yellowCards": "Сары қағаздар",
   "refereeTeam": "Төрешілер бригадасы",
-  "mainReferee": "Бас төреші:",
+  "mainReferee": "Бас төреші",
   "firstAssistant": "1-ші көмекші:",
   "secondAssistant": "2-ші көмекші:",
   "fourthReferee": "4-ші төреші:",
   "coachingStaff": "Жаттықтырушы штаб",
-  "headCoach": "Бас жаттықтырушы",
-  "assistants": "Көмекшілер",
-  "goalkeeper": "ЩҚ",
-  "goalkeeperFull": "Щанго қорғаушы",
-  "fieldPlayer": "Дала ойыншысы",
-  "onTarget": "Қақпаға",
+  "headCoach": "Бас бапкер",
+  "assistants": "Бапкер көмекшілері",
+  "goalkeeper": "Ққ",
+  "goalkeeperFull": "Қақпашы",
+  "fieldPlayer": "Алаң ойыншысы",
+  "onTarget": " Қақпаға бағытталған соққылар",
   "passes": "Пастар",
   "offTarget": "Қақпаның сыртына",
-  "yellows": "Сарылар",
+  "yellows": "Сары қағаздар",
   "offsides": "Офсайдтар",
-  "corners": "Көлбеу соққылар",
+  "corners": "Бұрыштамалар",
   "additionalStats": "Қосымша статистика",
   "home": "Басты бет",
   "loadingTournaments": "Турнирлер жүктелуде...",
@@ -592,5 +592,14 @@
   "enterEmailPhoneOrLogin": "Email, телефон немесе логин енгізіңіз",
   "emailPhoneOrLogin": "Email, телефон немесе логин",
   "createNewAccount": "Жаңа тіркелгі жасаңыз",
-  "passwordRequirements": "Құпия сөз кемінде 1 бас әріпті, 1 кіші әріпті, 1 санды және 1 арнайы таңбаны қамтуы керек"
+  "passwordRequirements": "Құпия сөз кемінде 1 бас әріпті, 1 кіші әріпті, 1 санды және 1 арнайы таңбаны қамтуы керек",
+  "noStatisticsAvailable": "Статистика қолжетімді емес",
+  "statisticsWillAppearHere": "Матч статистикасы мұнда пайда болады",
+  "noLineupAvailable": "Құрама қолжетімді емес",
+  "lineupWillAppearHere": "Команда құрамасы мұнда пайда болады",
+  "noPlayerStatsAvailable": "Ойыншылардың статистикасы қолжетімді емес",
+  "playerStatsWillAppearHere": "Ойыншылардың статистикасы мұнда пайда болады",
+  "withSupport": "қолдауымен",
+  "iAcceptTerms": "Мен шарттарды қабылдаймын",
+  "acceptTerms": "Құпиялық саясатының шарттарын қабылдау қажет"
 }
