commit fixed bugs

--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -32,15 +32,15 @@
   "lastNameMinChars": "Тегі кемінде 2 таңбаны қамтуы қажет",
   "enterPatronymic": "Әкесінің атын енгізіңіз (міндетті емес)",
   "enterPhoneHint": "Телефон нөмірін енгізіңіз (7XXXXXXXXXX)",
-  "registrationSuccess": "Тіркелу сәтті! Телефон нөмірін растаңыз",
+  "registrationSuccess": "Тіркелу сәтті өтті! Телефон нөмірін растаңыз",
   "register": "Тіркелу",
   "next": "Келесі",
-  "alreadyHaveAccount": "Тіркелгі бар ма? Кіру",
+  "alreadyHaveAccount": "Аккаунтыңыз бар ма? Кіру",
   "usernameValidation": "Логин әріптен басталуы және тек әріптер, сандар және _ қамтуы қажет",
   "usernameMinChars": "Логин кемінде 3 таңбаны қамтуы қажет",
   "enterPhoneForVerification": "Растау коды үшін телефон нөмірін енгізіңіз",
   "sendSMSCode": "SMS кодын жіберу",
-  "iHaveAccount": "Менде тіркелгі бар",
+  "iHaveAccount": "Менде аккаунт бар",
   "somethingWentWrong": "Бірдеңе дұрыс емес",
   "codeResentSuccessfully": "Код қайта жіберілді",
   "codeResendError": "Код жіберу қатесі",
@@ -127,7 +127,7 @@
   "newsLoadError": "Жаңалықтарды жүктеу қатесі",
   "nationalTeamGames": "Ұлттық құрама ойындары",
   "allGames": "Барлығы",
-  "clubGames": "Клуб ойындары",
+  "clubGames": "Клубтардың ойыны",
   "loadingErrorWithMessage": "Жүктеу қатесі:",
   "noUpcomingMatches": "Күтілетін матчтар жоқ",
   "noPastMatches": "Өткен матчтар жоқ",
@@ -173,7 +173,7 @@
   "tournaments": "Турнирлер",
   "past": "Өткен",
   "matchesLoadingError": "Матчтарды жүктеу қатесі",
-  "noUpcomingMatches": "Алдағы матчтар жоқ",
+  "noUpcomingMatches": "Әзірге ойын жоқ",
   "noPastMatches": "Өткен матчтар жоқ",
   "matchesWillBeDisplayed": "Матчтар қолжетімді болғанда көрсетіледі",
   "tournament": "Турнир",
@@ -203,7 +203,7 @@
   "matches": "Матчтар",
   "activeMatch": "Белсенді матч",
   "tickets": "Билеттер",
-  "yourTickets": "Сіздің билеттеріңіз",
+  "yourTickets": "Сіздің билетіңіз",
   "availableTickets": "Қолжетімді билеттер",
   "liveNow": "Тікелей эфир",
   "showQrToController": "QR кодын бақылаушыға көрсетіңіз",
@@ -249,19 +249,19 @@
   "newPasswordMustDiffer": "Жаңа құпия сөз ағымдағысынан ерекшеленуі тиіс",
   "changePassword": "Құпия сөзді өзгерту",
   "changeEmail": "Поштаны өзгерту",
-  "deleteAccount": "Тіркелгіні жою",
+  "deleteAccount": "Аккаунтты жою",
   "oldPassword": "Ескі құпия сөз",
   "enterOldPassword": "Ескі құпия сөзді енгізіңіз",
   "enterNewPassword": "Жаңа құпия сөзді енгізіңіз",
   "editProfile": "Профильді өңдеу",
-  "personalData": "Жеке деректер",
+  "personalData": "Жеке дерек",
   "logout": "Шығу",
   "enterCurrentPassword": "Ағымдағы құпия сөзді енгізіңіз",
   "enterNewPasswordField": "Жаңа құпия сөзді енгізіңіз",
   "repeatNewPasswordField": "Жаңа құпия сөзді қайталаңыз",
   "shop": "Дүкен",
-  "fields": "Алаңдар",
-  "sections": "Бөлімдер",
+  "fields": "Алаңды жалға алу",
+  "sections": "Секцияға жазылу",
   "years": "жас",
   "schedule": "Кесте",
   "noScheduleYet": "Кесте әлі жоқ",
@@ -302,7 +302,7 @@
   "book": "Брондау",
   "selectTime": "Уақыт таңдау",
   "pay": "Төлеу",
-  "fieldRental": "Алаң жалдау",
+  "fieldRental": "Алаң жалға беру",
   "searchFilters": "Іздеу сүзгілері",
   "minimumThreeCharacters": "Кемінде 3 таңба",
   "maximumTwoHundredFiftyFiveCharacters": "Ең көбі 255 таңба",
@@ -328,7 +328,7 @@
   "categories": "Санаттар",
   "buy": "Сатып алу",
   "firstLeague": "Бірінші лига",
-  "activeTickets": "Белсенді билеттер",
+  "activeTickets": "Билеттер",
   "buyTickets": "Билет сатып алу",
   "buyBooking": "Бронь сатып алу",
   "payOrder": "Тапсырысты төлеу",
@@ -337,7 +337,7 @@
   "tryAgain": "Қайта көру",
   "repeatPayment": "Қайталап төлеу",
   "loadingPayment": "Төлем жүктелуде...",
-  "noActiveTicketsYet": "Әлі белсенді билеттер жоқ",
+  "noActiveTicketsYet": "Әлі билеттер жоқ",
   "city": "Қала",
   "event": "Оқиға",
   "venueNotSpecified": "Орын көрсетілмеген",
@@ -399,13 +399,13 @@
   "femaleTournaments": "Әйелдер",
   "tournamentsNotFound": "Турнирлер табылмады",
   "tryChangeSearchFilters": "Іздеу сүзгілерін өзгертуге тырысыңыз",
-  "touchScreenToSkip": "Өткізіп жіберу үшін экранға тегіңіз",
+  "touchScreenToSkip": "Экранды жылжытыңыз",
   "deleteAccountConfirmation": "Аккаунтты жою растауы",
   "deleteAccountWarning": "Сіз өз аккаунтыңызды жойғыңыз келе ме? Бұл әрекетті кері қайтару мүмкін емес.",
   "deleteAccountPermanently": "Мәңгілікке жою",
   "accountDeleted": "Аккаунт сәтті жойылды",
   "accountDeletionFailed": "Аккаунтты жою қатесі",
-  "myBookings": "Менің брондарым",
+  "myBookings": "Мен қойған бронь",
   "pending": "Күтуде",
   "paid": "Төленді",
   "cancelled": "Болдырылмады",
@@ -428,9 +428,9 @@
   "addedToCart": "Себетке қосылды",
   "selectQuantity": "Санын таңдаңыз",
   "confirm": "Растау",
-  "myOrders": "Менің тапсырыстарым",
+  "myOrders": "Менің тапсырысым",
   "viewPurchaseHistory": "Сатып алу тарихын қарау",
-  "viewMyBookings": "Менің брондауларымды қарау",
+  "viewMyBookings": "Мен қойған броньдарды қарау",
   "authorizationRequired": "Авторизация қажет",
   "loginFirstToBook": "Брондау үшін алдымен аккаунтқа кіріңіз",
   "bookingRequestCreated": "Брондау сұрауы жасалды",
@@ -509,8 +509,8 @@
       }
     }
   },
-  "myOrders": "Менің тапсырыстарым",
-  "myBookings": "Менің брондарым",
+  "myOrders": "Менің тапсырысым",
+  "myBookings": "Мен қойған бронь",
   "cart": "Себет",
   "enterPinCode": "PIN кодын енгізіңіз",
   "appLogin": "Қосымшаға кіру",
@@ -525,7 +525,7 @@
   "confirmLoginWithBiometrics": "Биометрия арқылы кіруді растаңыз",
   "confirmButton": "Растау",
   "useBiometrics": "Биометрияны қолдану",
-  "loginWithDifferentAccount": "Басқа тіркелгімен кіру",
+  "loginWithDifferentAccount": "Басқа аккаунтпен кіру",
   "attemptsExceededLoginAgain": "Әрекеттер саны асты. Қайта кіріңіз.",
   "incorrectPinAttemptsRemaining": "Қате PIN код. Қалған әрекеттер: {count}",
   "@incorrectPinAttemptsRemaining": {
@@ -562,9 +562,9 @@
   "useBiometricsOrCreatePin": "Қосымшаны қорғау үшін биометрияны қолданыңыз немесе PIN код жасаңыз",
   "continueButton": "Жалғастыру",
   "giveAccessToData": "Деректерге қол жеткізуге рұқсат беру",
-  "resetPinCode": "PIN кодты қалпына келтіру",
+  "resetPinCode": "PIN-код",
   "giveAccessToData": "Деректерге қол жеткізуге рұқсат беру",
-  "privacyButton": "Жеке деректерді өңдеу саясаты",
+  "privacyButton": "Жеке деректі өңдеу",
   "privacyTitle": "Құпиялылық саясаты",
   "publicTitle": "Қоғамдық келісім-шарт (оферта)",
   "publicMobileTitle": "Мобильді қосымшаның ашық ұсынысы туралы келісім",
@@ -591,7 +591,7 @@
   "enterValidEmail": "Жарамды email енгізіңіз",
   "enterEmailPhoneOrLogin": "Email, телефон немесе логин енгізіңіз",
   "emailPhoneOrLogin": "Email, телефон немесе логин",
-  "createNewAccount": "Жаңа тіркелгі жасаңыз",
+  "createNewAccount": "Жаңа аккаунт жасаңыз",
   "passwordRequirements": "Құпия сөз кемінде 1 бас әріпті, 1 кіші әріпті, 1 санды және 1 арнайы таңбаны қамтуы керек",
   "noStatisticsAvailable": "Статистика қолжетімді емес",
   "statisticsWillAppearHere": "Матч статистикасы мұнда пайда болады",
